# vp-suite

./: .buildinfo  .gitignore  .readthedocs-custom-steps.yml  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  available_datasets.html  available_losses.html  available_metrics.html  available_model_blocks.html  available_models.html  config.py  conftest.py  dataset.py  environment.yml  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  quaternion.py  readme.html  requirements.txt  requirements_dev.txt  run.py  search.html  searchindex.js  setup.cfg  setup.py  train_pred.py  train_pred_model.py  train_pred_sweep.yaml  train_seg.py  train_seg_model.py  utils.py  visualize.py  vp_suite.base.base_dataset.html  (+48 more)
_sources/: available_datasets.rst.txt  available_losses.rst.txt  available_metrics.rst.txt  available_model_blocks.rst.txt  available_models.rst.txt  vp_suite.base.base_dataset.rst.txt  vp_suite.base.base_measure.rst.txt  vp_suite.base.base_model.rst.txt  vp_suite.base.base_model_block.rst.txt  vp_suite.base.rst.txt  vp_suite.datasets.bair.rst.txt  vp_suite.datasets.caltech_pedestrian.rst.txt  vp_suite.datasets.human36m.rst.txt  vp_suite.datasets.kitti_raw.rst.txt  vp_suite.datasets.kth.rst.txt  vp_suite.datasets.mmnist.rst.txt  vp_suite.datasets.mmnist_on_the_fly.rst.txt  vp_suite.datasets.physics101.rst.txt  vp_suite.datasets.rst.txt  vp_suite.datasets.synpick.rst.txt  vp_suite.defaults.rst.txt  vp_suite.measure.fvd.fvd.rst.txt  vp_suite.measure.fvd.rst.txt  vp_suite.measure.image_wise.rst.txt  vp_suite.measure.rst.txt  (+29 more)
(+324 files in other folders)
