[metadata]
name = vp-suite
version = 0.0.1
author = "Andreas Boltres"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Flunzmas/vp-suite

classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[aliases]
test = pytest

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    imageio
    matplotlib
    moviepy
    numpy
    opencv-python
    pyyaml
    pillow
    piqa
    scipy
    tfrecord
    toml
    torch
    torchfile
    torchvision
    tqdm
    wandb
tests_require =
    pytest
    pytest-cov
